# LLM_ASTER_MULTIMEDIA

./: .gitignore  README.md  pyproject.toml
configs/: sample.yaml
src/aster_multimedia/: __init__.py  cli.py  config.py  registry.py
src/aster_multimedia/tasks/: base.py  image_to_image.py  image_to_video.py  text_to_text.py  video_to_image.py
txt/: pc-specs.txt
